Salesforce Assignment/Salesforce_Assignment_10/src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <label>Applicant Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>